{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 57,
  "lineage": "20a1d609-d4f9-5a41-5fef-41f3a2d1c861",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02fd066b86800f60c",
            "arn": "arn:aws:ec2:us-east-1:471112617705:instance/i-0f0181d0b38ba85ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0181d0b38ba85ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deploy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d2068cb12d6604db"
              }
            ],
            "primary_network_interface_id": "eni-0d2068cb12d6604db",
            "private_dns": "ip-172-31-10-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.10.248",
            "public_dns": "ec2-3-235-105-29.compute-1.amazonaws.com",
            "public_ip": "3.235.105.29",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03942cf5ee1ad7ede",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aaae28e9e022216d",
            "tags": {
              "Name": "terraform-ubuntu-server",
              "Project": "terraform-ec2"
            },
            "tags_all": {
              "Name": "terraform-ubuntu-server",
              "Project": "terraform-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e165bba34a67839"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112617705",
            "id": "i-0f0181d0b38ba85ab",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "data.aws_ami.amiID"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112617705:security-group/sg-09e165bba34a67839",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e165bba34a67839",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "141.72.242.43/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-sg",
            "name_prefix": "",
            "owner_id": "471112617705",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-sg"
            },
            "tags_all": {
              "Name": "terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f1a388f93330811"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112617705",
            "id": "sg-09e165bba34a67839",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112617705:security-group-rule/sgr-0b6aa41b24e6c1c3c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b6aa41b24e6c1c3c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09e165bba34a67839",
            "security_group_rule_id": "sgr-0b6aa41b24e6c1c3c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112617705",
            "id": "sgr-0b6aa41b24e6c1c3c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112617705:security-group-rule/sgr-0ffad6e243add6ec9",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0ffad6e243add6ec9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09e165bba34a67839",
            "security_group_rule_id": "sgr-0ffad6e243add6ec9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112617705",
            "id": "sgr-0ffad6e243add6ec9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112617705:security-group-rule/sgr-0531581f095a2f7ca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0531581f095a2f7ca",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09e165bba34a67839",
            "security_group_rule_id": "sgr-0531581f095a2f7ca",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112617705",
            "id": "sgr-0531581f095a2f7ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sshfromyIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112617705:security-group-rule/sgr-035b3894c8ef39b08",
            "cidr_ipv4": "141.72.242.43/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-035b3894c8ef39b08",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09e165bba34a67839",
            "security_group_rule_id": "sgr-035b3894c8ef39b08",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112617705",
            "id": "sgr-035b3894c8ef39b08",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-sg"
          ]
        }
      ]
    }
  ]
}